--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "my-redis-project"
 version = "0.1.0"
 edition = "2024"
-default-run = "my-redis-project"
+# default-run = "my-redis-project"
 
 [dependencies]
 bytes = "1.10.1"
