--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 name = "my-redis-project"
 version = "0.1.0"
 edition = "2024"
-# default-run = "my-redis-project"
 
 [dependencies]
 bytes = "1.10.1"
+crossbeam = "0.8.4"
+futures = "0.3.31"
 mini-redis = "0.4.1"
 tokio = { version = "1.44.1", features = ["full"] }
 
