--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ crossbeam = "0.8.4"
 futures = "0.3.31"
 mini-redis = "0.4.1"
 tokio = { version = "1.44.1", features = ["full"] }
+tokio-stream = "0.1.17"
 
 [[example]]
 name = "hello-redis"
